avoid too much quotes in code blocks

--- a/stylesheets/livingstyleguide/_code.scss
+++ b/stylesheets/livingstyleguide/_code.scss
@@ -37,6 +37,11 @@
 
   q {
     color: lighten($livingstyleguide--code-color, 30%);
+
+    &:before,
+    &:after {
+      content: "";
+    }
   }
 
   var {
